tests/ui/resolve/open-ns-1.stderr
error[E0432]: unresolved import `my_api::utils`
  --> $DIR/open-ns-1.rs:8:13
   |
LL | use my_api::utils::util;
   |             ^^^^^ could not find `utils` in `my_api`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0432`.
